Replace summon page with wizard flow